--- a/src/PortfolioRebalancer/PortfolioRebalancer.Console/PortfolioRebalancer.Console.csproj
+++ b/src/PortfolioRebalancer/PortfolioRebalancer.Console/PortfolioRebalancer.Console.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net472</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>5e6705f3-eb35-48d8-973f-2a3f8f86b0ee</UserSecretsId>
   </PropertyGroup>
 
