--- a/src/PortfolioRebalancer/PortfolioRebalancer.App/PortfolioRebalancer.App.csproj
+++ b/src/PortfolioRebalancer/PortfolioRebalancer.App/PortfolioRebalancer.App.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="Avalonia" Version="0.9.3" />
     <PackageReference Include="Avalonia.Desktop" Version="0.9.3" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.9.3" />
+    <PackageReference Include="OxyPlot.Core" Version="2.0.0" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\PortfolioView.xaml">
@@ -31,6 +32,10 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PortfolioRebalancer\PortfolioRebalancer.csproj" />
-  <ProjectReference Include="..\..\..\external\oxyplot\Source\OxyPlot.Avalonia\OxyPlot.Avalonia.csproj"/>
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="OxyPlot.Avalonia">
+      <HintPath>..\..\..\external\oxyplot\Source\OxyPlot.Avalonia\bin\Debug\netstandard2.0\OxyPlot.Avalonia.dll</HintPath>
+    </Reference>
   </ItemGroup>
 </Project>
