--- a/src/PortfolioRebalancer/PortfolioRebalancer.Console/PortfolioRebalancer.Console.csproj
+++ b/src/PortfolioRebalancer/PortfolioRebalancer.Console/PortfolioRebalancer.Console.csproj
@@ -15,11 +15,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Python.Runtime.NETStandard" Version="3.7.1" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
 
   <ItemGroup>
