--- a/.github/workflows/dotnetcore.yml
+++ b/.github/workflows/dotnetcore.yml
@@ -13,6 +13,8 @@ jobs:
       working-directory: ./src/PortfolioRebalancer
     steps:
     - uses: actions/checkout@v2
+    - name: Checkout submodules
+      uses: textbook/git-checkout-submodule-action@2.1.1
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
