--- a/src/PortfolioRebalancer/PortfolioRebalancer.App/PortfolioRebalancer.App.csproj
+++ b/src/PortfolioRebalancer/PortfolioRebalancer.App/PortfolioRebalancer.App.csproj
@@ -12,6 +12,7 @@
       <SubType>Designer</SubType>
     </AvaloniaResource>
     <AvaloniaResource Include="Assets\**" />
+    <Folder Include="python_modules\" />
   </ItemGroup>
   <ItemGroup>
     <AvaloniaResource Remove="Views\PortfolioView.xaml" />
@@ -24,11 +25,27 @@
     <PackageReference Include="Avalonia.Desktop" Version="0.9.3" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.9.3" />
     <PackageReference Include="OxyPlot.Core" Version="2.0.0" />
+    <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <PackageReference Include="Python.Runtime.NETStandard" Version="3.7.1" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\PortfolioView.xaml">
       <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\PortfolioFetcher\chromedriver_win32.exe" Link="python_modules\chromedriver_win32.exe">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="..\..\PortfolioFetcher\fetchportfolio.py" Link="python_modules\fetchportfolio.py">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="..\..\PortfolioFetcher\nordnet.py" Link="python_modules\nordnet.py">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Include="..\..\PortfolioFetcher\portfolioModels.py" Link="python_modules\portfolioModels.py">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\external\oxyplot\Source\OxyPlot.Avalonia\OxyPlot.Avalonia.csproj" />
