--- a/src/PortfolioRebalancer/PortfolioRebalancer.App/PortfolioRebalancer.App.csproj
+++ b/src/PortfolioRebalancer/PortfolioRebalancer.App/PortfolioRebalancer.App.csproj
@@ -30,6 +30,7 @@
     <PackageReference Include="Avalonia" Version="0.9.3" />
     <PackageReference Include="Avalonia.Desktop" Version="0.9.3" />
     <PackageReference Include="Avalonia.ReactiveUI" Version="0.9.3" />
+    <PackageReference Include="LiteDB" Version="5.0.5" />
     <PackageReference Include="OxyPlot.Core" Version="2.0.0" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
     <PackageReference Include="Python.Runtime.NETStandard" Version="3.7.1" />
