--- a/src/PortfolioRebalancer/PortfolioRebalancer.App/PortfolioRebalancer.App.csproj
+++ b/src/PortfolioRebalancer/PortfolioRebalancer.App/PortfolioRebalancer.App.csproj
@@ -21,9 +21,11 @@
     <Folder Include="python_modules\" />
   </ItemGroup>
   <ItemGroup>
+    <AvaloniaResource Remove="Views\ImportDialog.xaml" />
     <AvaloniaResource Remove="Views\PortfolioView.xaml" />
   </ItemGroup>
   <ItemGroup>
+    <None Remove="Views\ImportDialog.xaml" />
     <None Remove="Views\PortfolioView.xaml" />
   </ItemGroup>
   <ItemGroup>
@@ -53,6 +55,11 @@
     <None Include="..\..\PortfolioFetcher\portfolioModels.py" Link="python_modules\portfolioModels.py">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\ImportDialog.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\external\oxyplot\Source\OxyPlot.Avalonia\OxyPlot.Avalonia.csproj" />
