Adding import dialog and tabs

--- a/src/PortfolioRebalancer/PortfolioRebalancer.App/PortfolioRebalancer.App.csproj
+++ b/src/PortfolioRebalancer/PortfolioRebalancer.App/PortfolioRebalancer.App.csproj
@@ -22,10 +22,12 @@
   </ItemGroup>
   <ItemGroup>
     <AvaloniaResource Remove="Views\ImportDialog.xaml" />
+    <AvaloniaResource Remove="Views\PortfoliosTabView.xaml" />
     <AvaloniaResource Remove="Views\PortfolioView.xaml" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Views\ImportDialog.xaml" />
+    <None Remove="Views\PortfoliosTabView.xaml" />
     <None Remove="Views\PortfolioView.xaml" />
   </ItemGroup>
   <ItemGroup>
@@ -58,6 +60,11 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\ImportDialog.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\PortfoliosTabView.xaml">
       <Generator>MSBuild:Compile</Generator>
     </EmbeddedResource>
   </ItemGroup>
